Centered Star Wars Text

--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
 
     background-color: black;
     color: yellow;
-
-    width: 300;
+    margin: auto;
+    width: 50%;
     text-align: center;
     font-size: 2.5em;
 }
